# serial_port_debugger

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SerialPortDebugger.desktop  com_message.cpp  com_message.hpp  combo_box_item_delegate.cpp  combo_box_item_delegate.hpp  command.cpp  command.hpp  commandscriptdialog.cpp  commandscriptdialog.hpp  commandscriptdialog.ui  font.qrc  image.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_res.qrc  savecommanddialog.cpp  savecommanddialog.hpp  savecommanddialog.ui  scriptconfig.cpp  scriptconfig.hpp  serial_port_debugger.pro  taskexecutor.cpp  taskexecutor.hpp  ui_MainWindow.h  ui_SaveCommandDialog.h  utils.cpp  utils.hpp
.github/workflows/: build.yml  build_config.yml  build_linux_amd.yml  build_linux_arm.yml
kit/amd_x86_64/: README.txt  build_appimage.sh
kit/arm64/: README.txt  build_appimage.sh
kit/windows_x86_64/: README.txt  SerialPortDebugger.iss  build_release.bat
toolchains/: linux-aarch64.cmake  linux-x86_64.cmake
